--- a/app/src/main/res/menu/fragment_photo_gallery.xml
+++ b/app/src/main/res/menu/fragment_photo_gallery.xml
@@ -4,10 +4,11 @@
     <item android:id="@+id/menu_item_search"
           android:title="@string/search"
           android:icon="@android:drawable/ic_menu_search"
-          app:showAsAction="ifRoom"/>
+          android:showAsAction="ifRoom"
+          android:actionViewClass="android.widget.SearchView"/>
 
     <item android:id="@+id/menu_item_clear"
           android:title="@string/clear_search"
           android:icon="@android:drawable/ic_menu_close_clear_cancel"
-          app:showAsAction="ifRoom"/>
+          android:showAsAction="ifRoom"/>
 </menu>
